# iris

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO
examples/: CMakeLists.txt
examples/ConstFold/: example.cpp
examples/DCE/: example.cpp
examples/PeepHole/: example.cpp
examples/dceBasic/: dceBasic.cpp
examples/domExample01/: domExample01.cpp
examples/domExample02/: domExample02.cpp
examples/domExample03/: domExample03.cpp
examples/factorial/: factorial.cpp
examples/loopExample01/: loopExample01.cpp
examples/loopExample02/: loopExample02.cpp
examples/loopExample03/: loopExample03.cpp
examples/loopExample04/: loopExample04.cpp
examples/loopExample05/: loopExample05.cpp
examples/loopExample06/: loopExample06.cpp
include/: attributes.hpp  data_types.hpp  exception.hpp  iris.hpp  utils.hpp
include/common/: attributes.hpp  data_types.hpp  generic_op.hpp  input.hpp  operation.hpp  types.hpp  user.hpp
include/dialects/: opcodes.hpp
include/dialects/arith/: ops.hpp
include/dialects/builtin/: ops.hpp
include/graph/: basic_block.hpp  builder.hpp  doms.hpp  loops.hpp  region.hpp
include/ops/: common.hpp  id_provider.hpp  types.hpp
include/ops/dialects/: opcodes.hpp
include/ops/dialects/arith/: ops.hpp
include/ops/dialects/builtin/: ops.hpp
include/ops/dialects/ctrlflow/: ops.hpp
include/ops/generic/: attributes.hpp  data_types.hpp  input.hpp  operation.hpp  user.hpp  utils.hpp
include/opt/generic/: pass.hpp  pattern.hpp
include/opt/lib/: passes.h
include/opt/lib/arith/: constfold.hpp  peephole.hpp
include/opt/lib/common/: dce.hpp
lib/: data_types.cpp  utils.cpp
lib/graph/: basic_block.cpp  doms.cpp  loops.cpp  region.cpp
lib/ops/generic/: operation.cpp
lib/opt/generic/: pattern.cpp
lib/opt/lib/arith/: constfold.cpp  peephole.cpp
lib/opt/lib/common/: dce.cpp
src/: main.cpp
src/lib/graph/: basic_block.cpp
src/lib/ops/generic/: input.cpp  operation.cpp  user.cpp
tests/: CMakeLists.txt  basic_block.cpp  builder.cpp  dom_info.cpp  doms.cpp  integration.cpp  loop_info.cpp  loops.cpp  main.cpp  operation.cpp  region.cpp  test_utils.hpp
tests/dialects/: arith.cpp  builtin.cpp  ctrlflow.cpp
tests/opt/arith/: constfold.cpp  peephole.cpp
tests/opt/common/: dce.cpp
